   by adding dedicated options 'db_htpasswd_hash_type' and 'db_htdigest_realm'

 new features
 * add recursion to option parser for configuration admin page and provide
   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
   by a select field (dropdown box) - or meaningful message on missing options


acct_mgr-0.3.2 (not yet released) - branch 0.11
 resolved issues
 * #9051: Unable to add users due to existing email addresses
   by fixing SQL statements responsible for db cleanup on account deletion
 * #9082: Remove cookie's `expires` param (0.12) when rememberme is unchecked
 * #9088: Expire trac_auth_session cookie before LoginModule._do_logout
 * fix TypeError in account details admin page for not yet authenticated users
 * make option `verify_email` effective for `RegistrationModule`
 * fix bug from initial password store chaining implementation leading to
   false-positives on user store discovery and later unexpected login failure


acct_mgr-0.3.1 (13-Jul-2011) - branch 0.11
 resolved issues
 * #8963: Restore compatibility with Trac 0.11 - holding 10 different issues
 * further improve redirect loop protection (infinite loop after /login)
 * add more verbose error log messages for missing/unreadable password file
 * remove duplicated message in Trac 0.11 at account details admin page
 * prevent argument duplication on POST requests of account details admin page
 * enable admin to restart password hash refresh from configuration admin page


acct_mgr-0.3 (07-Jul-2011) - branch 0.11
 resolved issues
 * #3233: Infinite redirect loop after resetting the password
 * #3783: Form based login fails to forward nicely on referrer outside of Trac
 * #3989: Email verification and password reset with notification lock users
 * #4040: TracError instance has no attribute 'acctmgr' on new user creation
 * #4160: Password reset oddness with multiple projects config
 * #5247: Stack trace escapes to user when htdigest file is not writeable